UnB-2023-2-linux/LP/I_LinguagemExpressoes-20231025/LE/LE1/ParLE.y
-- -*- haskell -*- File generated by the BNF Converter (bnfc 2.9.4.1).

-- Parser definition for use with Happy
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
{-# LANGUAGE PatternSynonyms #-}

module ParLE
  ( happyError
  , myLexer
  , pExp
  , pExp1
  , pExp2
  ) where

import Prelude

import qualified AbsLE
import LexLE

}

%name pExp Exp
%name pExp1 Exp1
%name pExp2 Exp2
-- no lexer declaration
%monad { Err } { (>>=) } { return }
%tokentype {Token}
%token
  '('      { PT _ (TS _ 1) }
  ')'      { PT _ (TS _ 2) }
  '*'      { PT _ (TS _ 3) }
  '+'      { PT _ (TS _ 4) }
  '-'      { PT _ (TS _ 5) }
  '/'      { PT _ (TS _ 6) }
  L_integ  { PT _ (TI $$)  }

%%

Integer :: { Integer }
Integer  : L_integ  { (read $1) :: Integer }

Exp :: { AbsLE.Exp }
Exp
  : Exp '+' Exp1 { AbsLE.EAdd $1 $3 }
  | Exp '-' Exp1 { AbsLE.ESub $1 $3 }
  | Exp1 { $1 }

Exp1 :: { AbsLE.Exp }
Exp1
  : Exp1 '*' Exp2 { AbsLE.EMul $1 $3 }
  | Exp1 '/' Exp2 { AbsLE.EDiv $1 $3 }
  | Exp2 { $1 }

Exp2 :: { AbsLE.Exp }
Exp2 : Integer { AbsLE.EInt $1 } | '(' Exp ')' { $2 }

{

type Err = Either String

happyError :: [Token] -> Err a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer :: String -> [Token]
myLexer = tokens

}
